make group overridable
Right now the default group is `tserver`. We want to make this
overridable. N.B.: Right now we have no code to yet to guarantee that
$sysconfdir and $localstatedir belong to that group.

--- a/templates/51-cache-disk.rules.erb
+++ b/templates/51-cache-disk.rules.erb
@@ -6,7 +6,7 @@
 <% if @storage and not @storage.empty? -%>
 <% @storage.each do |path,size| -%>
 <% if not size or size.empty? -%>
-SUBSYSTEM=="block", KERNEL=="<%= path -%>", GROUP:="tserver"
+SUBSYSTEM=="block", KERNEL=="<%= path -%>", GROUP:="<%= @group -%>"
 <% end -%>
 <% end -%>
 <% end -%>
