consistency! use @group replacement here too

--- a/templates/51-cache-disk.rules.erb
+++ b/templates/51-cache-disk.rules.erb
@@ -1,7 +1,7 @@
 #
 # Don't modify this file! It's manged by puppet and will be overwritten!
 #
-# Assign cache disks to tserver group
+# Assign cache disks to <%= @group %> group
 # make the assignment final, no later changes allowed to the group!
 #
 <% if @storage and not @storage.empty? -%>
