--- a/templates/plugin.config.erb
+++ b/templates/plugin.config.erb
@@ -3,16 +3,10 @@ set #comment[2] "during the next Puppet run."
 rm plugin
 <% if @plugins and not @plugins.empty? -%>
 <% i = 0 -%>
-<% @plugins.each do |line| -%>
-<% if line.class == 'Hash' -%>
-<% plugin = line.keys.first -%>
-<% args = line.values.first -%>
-<% else -%>
-<% plugin = line -%>
-<% end -%>
+<% @plugins.each do |plugin,args| -%>
 <% i += 1 -%>
 set plugin[<%= i -%>] <%= plugin %>
-<% if args and not args.empty? -%>
+<% unless args == '' or args == nil or args.empty? -%>
 set plugin[<%= i -%>]/args <%= args -%>
 <% end -%>
 <% end -%>
