--- a/templates/ssl_multicert.config.erb
+++ b/templates/ssl_multicert.config.erb
@@ -1,10 +1,13 @@
 # This file managed by Puppet. Local changes will be overwritten
 # during the next Puppet run.
 <%- if @ssl_hosts and not @ssl_hosts.empty? -%>
-	<%- @ssl_hosts.each do |host| -%>
+  <%- @ssl_hosts.each do |host| -%>
+    <%- fail("Host does not contain a ssl_cert_name!") unless host.has_key?("ssl_cert_name") -%>
     <%- host.each do |k,v| -%>
+      <%- fail("#{k} is not a valid Traffic Server SSL directive")
+          unless ['dest_ip', 'ssl_cert_name', 'ssl_ca_name', 'ssl_key_name'].include?(k) -%>
 <%= k %>=<%= v -%><%= ' ' -%>
-    <%- end -%>
+      <%- end -%>
 <%= "\n" -%>
-	<%- end -%>
+    <%- end -%>
 <%- end -%>
