plugin.config: fix name of lenses & path of config file
It's plugin.config and plugin.lns -- not plugins.config or plugins.lns
That was hard to find.
Also, remove one more instance of real_ here.

--- a/templates/plugin.config.erb
+++ b/templates/plugin.config.erb
@@ -1,8 +1,9 @@
 set #comment[1] "This file managed by Puppet. Local changes will be overwritten"
 set #comment[2] "during the next Puppet run."
 <% if @plugin and not @plugin.empty? -%>
-set plugin[.='<%= plugin -%>'] <%= plugin -%>.<%= @plugin_extension %>
-<% unless @args == '' or @args == nil or @args.empty? -%>
-set plugin[.='<%= plugin -%>']/args <%= @args -%>
-<% end -%>
+<%   plugin_path = "#{@plugin}.#{@plugin_extension}" -%>
+set plugin[.='<%= plugin_path -%>'] <%= plugin_path %>
+<%   unless @args == '' or @args == nil or @args.empty? -%>
+set plugin[.='<%= plugin_path -%>']/args <%= @args -%>
+<%   end -%>
 <% end -%>
