rename all instances of reverse_map to rev_map
for brevity, we consistently rename reverse_map to rev_map, everywhere.

--- a/templates/remap.config.erb
+++ b/templates/remap.config.erb
@@ -12,8 +12,8 @@ set regex_map[.='<%= url -%>'] <%= url %>
 set regex_map[.='<%= url -%>']/replacement <%= backend %>
 <%   end -%>
 <% end -%>
-<% if @reverse_map and not @reverse_map.empty? -%>
-<%   @reverse_map.each do |backend,url| -%>
+<% if @rev_map and not @rev_map.empty? -%>
+<%   @rev_map.each do |backend,url| -%>
 set reverse_map[.='<%= backend -%>'] <%= backend %>
 set reverse_map[.='<%= url -%>']/replacement <%= url %>
 <%   end -%>
