--- a/templates/ssl_multicert.config.erb
+++ b/templates/ssl_multicert.config.erb
@@ -1,5 +1,5 @@
-<%- if @ssl_hosts and not @ssl_hosts.empty? -%>
-  <%- @ssl_hosts.each do |host| -%>
+<%- if @ssl_host and not @ssl_host.empty? -%>
+  <%- @ssl_host.each do |host| -%>
     <%- fail("Host does not contain a ssl_cert_name!") unless host.has_key?("ssl_cert_name") -%>
     <%- host.each do |k,v| -%>
       <%- fail("#{k} is not a valid Traffic Server SSL directive") unless ['dest_ip', 'ssl_cert_name', 'ssl_ca_name', 'ssl_key_name'].include?(k) -%>
