the big storage rewrite: replace our attempt at replacing ::storage with a type with a better defined type
do the same thing that we did in trafficserver_storage, but with less
pain, because we don't need to consider inheritance, and and and.

things i'm not happy with:

* the use of create_resource in the middle of an if/else.

this could be made "more graceful", by *exclusively* using
create_resource()... declaring mkdir a "provider", too.

--- a/templates/storage.config.erb
+++ b/templates/storage.config.erb
@@ -1,11 +1,1 @@
-set #comment[1] "This file managed by Puppet. Local changes will be overwritten"
-set #comment[2] "during the next Puppet run."
-rm path
-<% if @storage and not @storage.empty? -%>
-<%   @storage.each do |path,size| -%>
-set path[.='<%= path -%>'] <%= path %>
-<%     if size and not size.empty? -%>
-set path[.='<%= path -%>']/size <%= size %>
-<%     end -%>
-<%   end -%>
-<% end -%>
+<%= @path %><%= " #{@size}" if @size %><%= " # #{@comment}" if @comment %>
