fix udev rules template ~_~

--- a/templates/51-cache-disk.rules.erb
+++ b/templates/51-cache-disk.rules.erb
@@ -1,14 +1,1 @@
-#
-# Don't modify this file! It's manged by puppet and will be overwritten!
-#
-# Assign cache disks to <%= @group %> group
-# We cannot make the assignment final for some reason :S
-#
-<%- if @storage and not @storage.empty? -%>
-<%- @storage.each do |path,size| -%>
-<%- if not size or size.empty? -%>
-<%- kernel = path.split('/')[-1]  -%>
-SUBSYSTEM=="block", KERNEL=="<%= kernel -%>", GROUP:="<%= @group -%>"
-<% end -%>
-<% end -%>
-<% end -%>
+SUBSYSTEM=="block", KERNEL=="<%= @path -%>", GROUP:="<%= @group -%>"
