udev wants the device path without dev as "kernel"
udev is weird.

--- a/templates/51-cache-disk.rules.erb
+++ b/templates/51-cache-disk.rules.erb
@@ -1,1 +1,1 @@
-SUBSYSTEM=="block", KERNEL=="<%= @path -%>", GROUP:="<%= @group -%>"
+SUBSYSTEM=="block", KERNEL=="<%= @kernel -%>", GROUP:="<%= @group -%>"
