add to/from as more generic names for target/replacement
they can be supplied in addition to config
we remove the validation from the defined type, bc it's too much effort
to validate....

--- a/templates/remap.config.remap.erb
+++ b/templates/remap.config.remap.erb
@@ -1,8 +1,9 @@
 <%- if !@activatefilter.nil? and !@activatefilter.empty? -%>
 .activatefilter <%= @activatefilter %>
 <%- end -%>
-<%- if ! @config.empty? -%>
-<%= @type %> <%= Array(@config).join(' ')  %>
+<%- a = [@from, @to, @config].compact.flatten -%>
+<%- if ! a.empty? -%>
+<%= @type %> <%= a.join(' ')  %>
 <%- else -%>
 
 <%- end -%>
