remap.config is managed by puppet, warn appropriately

--- a/templates/remap.config.header.erb
+++ b/templates/remap.config.header.erb
@@ -1,4 +1,6 @@
 #
+# Do not modify this file! It's manged by puppet and will be overwritten!
+#
 #  URL Remapping Config File
 #
 # Using remap.config allows you to accomplish two things:
